--- a/Grep7/index.html
+++ b/Grep7/index.html
@@ -57,11 +57,11 @@
 <h2>役割分担</h2>
 <!-- 役割分担を書く．-->
 <ul>
-<li>佐藤清隆 : プランナー担当
+<li>佐藤清隆 : planning担当
 <li>寺部和紀 : GUI担当
 <li>早川駿 : GUI担当
-<li>林幸汰 : プランナー担当
-<li>林政行 : グラフィック担当
+<li>林幸汰 : planning担当
+<li>林政行 : graphic担当
 </ul>
 
 <h2>ソースファイル</h2>
