--- a/Grep7/index.html
+++ b/Grep7/index.html
@@ -163,8 +163,9 @@
 <!-- 参考文献を書く．助けてもらった人がいれば，それも書く-->
 
 <ul>
-  <li>  </li>
+  <li><a href = "http://dancorkill.home.comcast.net/~dancorkill/pubs/distributed-NOAH.html">Hierarchical Planning in a Distributed Environment - Daniel D.Corkill (February 1979)</a></li>
+  <li><a href = "http://www-cs-students.stanford.edu/~pdoyle/quail/notes/pdoyle/planning.html">AI Qual Summary: Planning</a></li>
+  <li>知能プログラミング論 第五回 講義資料 -プラン表現と問題解決-(火曜9-10限)</li>
 </ul>
-
 </body>
 </html>
