--- a/Grep7/index.html
+++ b/Grep7/index.html
@@ -447,6 +447,9 @@ else if (stacks.size() == 0) {
 <!-- 画像ファイルを貼る場合は <img> タグを使う -->
 <!--<img src="./hoge/image.png"/>-->
 
+<img src="ssGUI.png"/>-
+<img src="result.png"/>-
+
 <p>
 
 
