checkkprepを通ったの作りました

--- a/Grep7/index.html
+++ b/Grep7/index.html
@@ -445,10 +445,9 @@ else if (stacks.size() == 0) {
 </p>
 
 <!-- 画像ファイルを貼る場合は <img> タグを使う -->
-<!--<img src="./hoge/image.png"/>-->
 
-<img src="ssGUI.png"/>-
-<img src="result.png"/>-
+<img src="ssGUI.png"/>
+<img src="result.png"/>
 
 <p>
 
